@@ -3,6 +3,7 @@
 - Strip trailing whitespace when redirecting standard output streams to log
 - Add OpenTelemetry tracing module
 - Add OpenTelemetry tracing to HTTP client
+- Add OpenTelemetry tracing for JAX-RS
 - Add OpenTelemetry trace context to JSON logging
 - Add openmetrics and security-jwks to BOM
 - Add getProperty method to AbstractConfigurationAwareModule
